--- a/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
+++ b/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
@@ -40,6 +40,7 @@
     <Compile Include="ControllerPlayerSprite.cs" />
     <Compile Include="EnemySprite.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="KeyboardPlayerSprite.cs" />
     <Compile Include="Music.cs" />
     <Compile Include="PlatformSprite.cs" />
     <Compile Include="Program.cs" />
