Start bullet setup and new wooden platforms

--- a/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
+++ b/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
@@ -74,6 +74,9 @@
     <Content Include="Content\swordguy.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\wood-platform.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
