--- a/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
+++ b/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
@@ -56,6 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\blog_alien_concepts.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\bullet.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
