--- a/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
+++ b/MHacksTestTwo/MHacksTestTwo/MHacksTestTwo.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\blog_alien_concepts.jpg">
+    <Content Include="Content\blog_alien_concepts.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\bullet.png">
