Improve keyboard api for mouse support

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,5 @@ MHacksTestTwo/MHacksTestTwo/obj/x86/Debug/MHacksTestTwo.csproj.FileListAbsolute.
 MHacksTestTwo/MHacksTestTwo/obj/x86/Debug/MHacksTestTwo.csprojResolveAssemblyReference.cache
 MHacksTestTwo/MHacksTestTwo/obj/x86/Debug/MHacksTestTwo.exe
 MHacksTestTwo/MHacksTestTwo/obj/x86/Debug/MHacksTestTwo.pdb
+MonoGameInstaller-3.2.exe
+Bass24.Net.zip
